--- a/resume.tex
+++ b/resume.tex
@@ -58,16 +58,16 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
-% \photo[rectangle,edge,right]{profile}
-\name{Junhao}{Dong}
-\position{Software Engineer}
-% \address{address}
+\photo[rectangle,edge,left]{photo}
+\name{Huatao}{Xu}
+\position{Master Student}
+% \address{Shanghai}
 
-\mobile{(678) 343-1817}
-\email{junhao.dong96@gmail.com}
-% \homepage{homepage}
-\github{junhaodong}
-\linkedin{junhaodong}
+\mobile{+86 15221276575}
+\email{xuhuatao@sjtu.edu.cn}
+\homepage{dapowan.github.io}
+\github{dapowan}
+% \linkedin{https://github.com/dapowan}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -94,9 +94,13 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{resume/education.tex}
-\input{resume/skills.tex}
-\input{resume/experience.tex}
+\input{resume/publication.tex}
 \input{resume/projects.tex}
+\input{resume/experience.tex}
+\input{resume/honor_award.tex}
+\input{resume/skills.tex}
+
+
 
 %-------------------------------------------------------------------------------
 \end{document}
