--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,16 +1,20 @@
+%!TEX root = ../resume.tex
 \cvsection{Education}
 
 \begin{cventries}
+
   \cventry
-    {Bachelor of Science in Computer Science, GPA: 3.5/4.0} % Degree
-    {Northeastern University} % Institution
-    {Boston, MA} % Location
-    {May 2019} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-         \item {\textbf{University of Hong Kong}, Hong Kong, China --- \entrydatestyle{Semester Abroad Fall 2018}}
-         \vspace{0.5mm}
-         \item {\textbf{Aquincum Institute of Technology}, Budapest, Hungary --- \entrydatestyle{Semester Abroad Fall 2017}}
-      \end{cvitems}
-    }
+    {Master of Software Engineering, GPA: 3.51/4.0, Advised by Prof. Dong Wang} % Degree
+    {Shanghai Jiao Tong University (SJTU)} % Institution
+    {Shanghai, China} % Location
+    {Sept. 2017 - Mar. 2020} % Date(s)
+    {}
+ \EntryGap
+  \cventry
+    {Bachelor of Software Engineering, GPA: 4.05/5.0} % Degree
+    {Nanjing University (NJU)} % Institution
+    {Nanjing, China} % Location
+    {Sept. 2013 - Jun. 2017} % Date(s)
+    {}
 \end{cventries}
+
