--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -1,27 +1,49 @@
+%!TEX root = ../resume.tex
 \cvsection{Projects}
-
 \begin{cventries}
   \cventry
     {} % Empty position
-    {Shellfish} % Project
+    {RFID-based Deep Learning Enhanced Holographic Localization System} % Project
     {} % Empty location
-    {} % Empty date
+    {2019} % Empty date
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {A command line interface based on the Unix Bash shell, written in C.}
-		\item {Supports EOF (Ctrl-D) and SIGINT (Ctrl-C), multiple commands per line, and chained redirection and piping.}
+        \item {A Python project that analyzes RFID signals and estimates positions of RFID tags based on Tensorflow.}
       \end{cvitems}
     }
-
+    \EntryGap
   \cventry
     {} % Empty position
-    {Zero Robotics} % Project
+    {Student Work Traceability Display System} % Project
     {} % Empty location
-    {} % Empty date
+    {2018} % Empty date
     {
       \begin{cvitems} % Description(s) bullet points
-      	\item {Semifinalist out of 200 teams in MIT's international high school programming competition in C.}
-		\item {Implemented 3D vector physics and game strategy for an autonomous satellite simulation using the ZR API.}
+        \item {A platform for primary school students to share videos of the processes of making handmade products.} 
+        \item {Responsible for the C\# program that displays and records video data captured by HIKVISION cameras.}
+      \end{cvitems}
+    }
+    \EntryGap
+  \cventry
+    {} % Empty position
+    {RFID Sensing Platform} % Project
+    {} % Empty location
+    {2017} % Empty date
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {An extensible C\# program that collects and displays low level RFID signals profiles reported from ImpinJ reader using LLRP protocol.}
+        \item {Responsible for implemention of localization algorithms and program controlling RFID readers and linear guide simultaneously.}
+      \end{cvitems}
+    }
+    \EntryGap
+  \cventry
+    {} % Empty position
+    {Systematic Evaluation System} % Project
+    {} % Empty location
+    {2017} % Empty date
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {A website where users can search literature with key words, which is constructed based on Python Django framework.}
       \end{cvitems}
     }
 \end{cventries}
