--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,11 +1,17 @@
+%!TEX root = ../resume.tex
 \cvsection{Skills}
-
 \begin{cvskills}
   \cvskill
     {Languages} % Type
-    {Python, Java, JavaScript, C, Ruby, Hack, Scheme} % Skillset
+    {Python, Java, JavaScript, Latex, Matlab, C\#} % Skillset
 
   \cvskill
     {Frameworks} % Type
-    {Django, Jenkins, Chef, React, Angular, Flask, AWS, Docker, GraphQL} % Skillset
+    {Tensorflow, Django, J2EE, Vue.js} % Skillset
+  \cvskill
+    {Tests} % Type
+    {\makecell[l]{TOEFL(iBT) - 97 (R-27 L-25 S-21 W-25) \\ GRE - 324 (V-154 Q-170) + 3 (AW)}} % Skillset
+  \cvskill
+  	{others}
+  	{Good communication skills and strong work responsibility}
 \end{cvskills}
