my resume upload

--- a/resume.tex
+++ b/resume.tex
@@ -3,14 +3,16 @@
 % Awesome CV LaTeX Template for CV/Resume
 %
 % This template has been downloaded from:
-% https://github.com/posquit0/Awesome-CV
+% https://github.com/junhaodong/resume
 %
 % Original author:
-% Claud D. Park <posquit0.bj@gmail.com>
-% http://www.posquit0.com
+% Junhao Dong <junhao.dong96@gmail.com>
 %
 % Modifications by:
-% Junhao Dong <junhao.dong96@gmail.com>
+% Huatao Xu <xuhuatao95@gmail.com>
+% Compared to the original template, I made some style changes, revised command \cventry, and add a new command \cvpub. 
+% All these efforts are aim to make this template more suitable for acadamic researchers.
+% Hope you like it! :) 
 %
 % Template license:
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
