--- a/resume/honor_award.tex
+++ b/resume/honor_award.tex
@@ -3,24 +3,24 @@
 \begin{cvhonors}
 
 \cvhonor
-	{SJTU} %Position
-	{Shanghai Outstanding Graduate Student}
-	{} %description
+	{SJTU} % organization
+	{Shanghai Outstanding Graduate Student} %title
+	{} %description: empty or not.
 	{2020}
 \cvhonor
-	{SJTU} %Position
+	{SJTU} 
 	{China National Scholarship}
 	{{\color{red}Highest} national wide scholarship for postgraduate students in China} %description
 	{2019}
 \cvhonor
-	{SJTU} %Position
+	{SJTU} 
 	{First-class Scholarship}
-	{} %description
+	{} 
 	{2017-2019}
 \cvhonor
-	{NJU} %Position
+	{NJU} 
 	{Nanjing University Inspirational Scholarship}
-	{} %description
+	{}
 	{2017}
 
 \end{cvhonors}
