--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -2,47 +2,47 @@
 \cvsection{Projects}
 \begin{cventries}
   \cventry
-    {} % Empty position
+    {} % must be empty
     {RFID-based Deep Learning Enhanced Holographic Localization System} % Project
-    {} % Empty location
-    {2019} % Empty date
+    {} % must be empty
+    {2019} % date
     {
-      \begin{cvitems} % Description(s) bullet points
+      \begin{cvitems} % Description(s) 
         \item {A Python project that analyzes RFID signals and estimates positions of RFID tags based on Tensorflow.}
       \end{cvitems}
     }
     \EntryGap
   \cventry
-    {} % Empty position
-    {Student Work Traceability Display System} % Project
-    {} % Empty location
-    {2018} % Empty date
+    {} 
+    {Student Work Traceability Display System} 
+    {} 
+    {2018} 
     {
-      \begin{cvitems} % Description(s) bullet points
+      \begin{cvitems} 
         \item {A platform for primary school students to share videos of the processes of making handmade products.} 
         \item {Responsible for the C\# program that displays and records video data captured by HIKVISION cameras.}
       \end{cvitems}
     }
     \EntryGap
   \cventry
-    {} % Empty position
-    {RFID Sensing Platform} % Project
-    {} % Empty location
-    {2017} % Empty date
+    {} 
+    {RFID Sensing Platform} 
+    {} 
+    {2017} 
     {
-      \begin{cvitems} % Description(s) bullet points
+      \begin{cvitems} 
         \item {An extensible C\# program that collects and displays low level RFID signals profiles reported from ImpinJ reader using LLRP protocol.}
         \item {Responsible for implemention of localization algorithms and program controlling RFID readers and linear guide simultaneously.}
       \end{cvitems}
     }
     \EntryGap
   \cventry
-    {} % Empty position
-    {Systematic Evaluation System} % Project
-    {} % Empty location
-    {2017} % Empty date
+    {} 
+    {Systematic Evaluation System} 
+    {} 
+    {2017} 
     {
-      \begin{cvitems} % Description(s) bullet points
+      \begin{cvitems} 
         \item {A website where users can search literature with key words, which is constructed based on Python Django framework.}
       \end{cvitems}
     }
