--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,14 +1,12 @@
 %!TEX root = ../resume.tex
 \cvsection{Education}
-
 \begin{cventries}
-
   \cventry
     {Master of Software Engineering, GPA: 3.51/4.0, Advised by Prof. Dong Wang} % Degree
     {Shanghai Jiao Tong University (SJTU)} % Institution
     {Shanghai, China} % Location
     {Sept. 2017 - Mar. 2020} % Date(s)
-    {}
+    {} % must be empty
  \EntryGap
   \cventry
     {Bachelor of Software Engineering, GPA: 4.05/5.0} % Degree
