resume template upload

--- a/resume.tex
+++ b/resume.tex
@@ -11,7 +11,7 @@
 % Modifications by:
 % Huatao Xu <xuhuatao95@gmail.com>
 % Compared to the original template, I made some style changes, revised command \cventry, and add a new command \cvpub. 
-% All these efforts are aim to make this template more suitable for acadamic researchers.
+% All these efforts are aim to make this template more suitable for academic researchers.
 % Hope you like it! :) 
 %
 % Template license:
@@ -60,12 +60,12 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
-\photo[rectangle,edge,left]{photo}
+%\photo[rectangle,edge,left]{photo}
 \name{Huatao}{Xu}
 \position{Master Student}
 % \address{Shanghai}
 
-\mobile{+86 15221276575}
+\mobile{+86 123456789}
 \email{xuhuatao@sjtu.edu.cn}
 \homepage{dapowan.github.io}
 \github{dapowan}
