--- a/resume.tex
+++ b/resume.tex
@@ -11,7 +11,7 @@
 % Modifications by:
 % Huatao Xu <xuhuatao95@gmail.com>
 % Compared to the original template, I made some style changes, revised command \cventry, and add a new command \cvpub. 
-% All these efforts are aim to make this template more suitable for acadamic researchers.
+% All these efforts are aim to make this template more suitable for academic researchers.
 % Hope you like it! :) 
 %
 % Template license:
